# minecraft-server-auto-scaler

./: .gitignore  lambda_function.py
discord_notifier/: .terraform.lock.hcl  build.sh  lambda_function.py  main.tf  mypy.ini  pyproject.toml
discord_notifier/src/: lambda_function.py
instance_controller/: build.sh  lambda_function.py
