[project]
name = "discord-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.33",
    "discord-interactions>=0.4.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[ec2,ssm]>=1.37.33",
    "mypy>=1.15.0",
]
